--- a/estate/views/estate_property_tag.xml
+++ b/estate/views/estate_property_tag.xml
@@ -13,6 +13,6 @@
     <record id="estate_property_tag" model="ir.actions.act_window">
         <field name="name">Property Tags</field>
         <field name="res_model">estate.property.tag</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">tree</field>
     </record>
 </odoo>
